--- a/molly/apps/tours/templates/tours/create_desktop.html
+++ b/molly/apps/tours/templates/tours/create_desktop.html
@@ -4,14 +4,24 @@
 <head>
     <title>{% trans "Create a tour" %}</title>
     {% compressed_css 'tours-desktop' %}
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
     {% compressed_js 'tours-desktop' %}
     <script type="text/javascript">
         var current_stops = [
             {% for entity in entities %}
-                '{{ entity.identifier_scheme }}:{{ entity.identifier_value }}',
+                '{{ entity.identifier_scheme|escapejs }}:{{ entity.identifier_value|escapejs }}',
             {% endfor %}
-        ]
+        ];
+        var all_pois = [
+            {% for entity in all_pois %}
+            {
+                id: '{{ entity.identifier_scheme|escapejs }}:{{ entity.identifier_value|escapejs }}',
+                label: '{{ entity.title|escapejs }}',
+            },
+            {% endfor %}
+        ];
     </script>
 </head>
 <body>
@@ -39,6 +49,8 @@
             <input type="submit" value="{% trans 'Save' %}" />
         </form>
     </div>
+    
+    <input id="poi-search" type="text" placeholder="{% trans 'Search for a point of interest' %}" />
     
     {% if suggestions %}
         <div class="attractions-grouping">
