--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -42,7 +42,7 @@
   {% include "places/metadata/real_time_information.html" %}
   
   {% if entity.location %}
-    <div class="section-content no-round-bottom">
+    <div class="section-content">
       {% render_location_map entity.location %}
     </div>
     <ul class="link-list category-list">
