--- a/molly/apps/sakai/templates/sakai/signup/detail.html
+++ b/molly/apps/sakai/templates/sakai/signup/detail.html
@@ -98,7 +98,7 @@
         <h2>{{ event.title }}</h2>
     </div>
     {# Metadata about the sign-up slots #}
-    <div class="section-content no-round-bottom">
+    <div class="section-content">
         
         {# Time and Date #} 
         {% ifequal event.start|date:"dMY" event.end|date:"dMY" %}
