--- a/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/apps/service_status/templates/service_status/index.html
@@ -10,7 +10,7 @@
   {% if announcements %}
   <h3 class="invisible">{% trans "Service announcements" %}</h3>
   
-  <ul class="content-list no-round-bottom">
+  <ul class="content-list">
 {% for announcement in announcements %}
     <li>
       <h3>{{ announcement.title }}</h3>
