--- a/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/apps/places/templates/places/metadata/osm.html
@@ -7,7 +7,7 @@
     <h2>{% trans "Information from OpenStreetMap" %}</h2>
   </div>
   {% if entity|osm_tags %}
-  <div class="section-content no-round-bottom">
+  <div class="section-content">
       <dl>
         {% for tag,content in entity|osm_tags %}
           <dt>{{ tag|capfirst }}:</dt>
