--- a/molly/apps/tours/templates/tours/create.html
+++ b/molly/apps/tours/templates/tours/create.html
@@ -49,7 +49,7 @@
         <div class="header">
             <h2>{{ entity_type.verbose_name_plural|capfirst }}</h2>
         </div>
-        <ul class="link-list{% if not forloop.last %} no-round-bottom{% endif %}">
+        <ul class="link-list">
             {% for entity in attraction_entities %}
                 <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
             {% endfor %}
