--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -1,7 +1,6 @@
 /* Molly's root smart.css */
 
 /*
- 
     CSS styles should be used like so:
     
 	div.section
@@ -14,11 +13,6 @@
                 ol.directions-list
                 div.section-content
                 div.form-section
-    
-    If having multiple link-list, etc, then no-round-bottom can be used to make
-    them flow properly (i.e., put it on every one but the last one). If you
-    have no header, then the first child of div.section should have class
-    stand-alone
 */
 
 /*** Generic ***/
@@ -85,28 +79,7 @@ div.pad-5 { padding: 5px; }
 
 /* Lists not in sections */
 .stand-alone {
-    -webkit-border-top-left-radius: 8px;
-    -webkit-border-top-right-radius: 8px;
-    -moz-border-radius-topleft: 8px;
-    -moz-border-radius-topright: 8px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
     margin: 10px !important;
-}
-
-/* Handle rounded bottom exceptions on section parts */
-div.no-round-bottom,
-ul.no-round-bottom,
-li.no-round-bottom,
-table.no-round-bottom > *:last-child > tr:last-child > *:last-child,
-table.no-round-bottom > *:last-child > tr:last-child > *:first-child {
-    -webkit-border-bottom-left-radius: 0px !important;
-    -moz-border-radius-bottomleft: 0px !important;
-    border-bottom-left-radius: 0px !important;
-    
-    -webkit-border-bottom-right-radius: 0px !important;
-    -moz-border-radius-bottomright: 0px !important;
-    border-bottom-right-radius: 0px !important;
 }
 
 /* Breadcrumb Trail Styles */
@@ -191,13 +164,6 @@ ol.search-results {
     list-style: none;
     padding: 0;
     margin: 0;
-    -webkit-border-bottom-left-radius: 8px;
-    -moz-border-radius-bottomleft: 8px;
-    border-bottom-left-radius: 8px;
-    
-    -webkit-border-bottom-right-radius: 8px;
-    -moz-border-radius-bottomright: 8px;
-    border-bottom-right-radius: 8px;
 }
 
 ul.content-list,
@@ -477,6 +443,18 @@ div.section {
     -moz-box-shadow: 2px 2px 2px #333; -webkit-box-shadow: 2px 2px 2px #333; box-shadow: 2px 2px 2px #333;
 }
 
+.stand-alone,
+div.section> *:first-child {
+    -webkit-border-top-right-radius: 8px; -moz-border-radius-topright: 8px; border-top-right-radius: 8px;
+    -webkit-border-top-left-radius: 8px; -moz-border-radius-topleft: 8px; border-top-left-radius: 8px;
+}
+
+.stand-alone,
+div.section> *:last-child {
+    -webkit-border-bottom-right-radius: 8px; -moz-border-radius-bottomright: 8px; border-bottom-right-radius: 8px;
+    -webkit-border-bottom-left-radius: 8px; -moz-border-radius-bottomleft: 8px; border-bottom-left-radius: 8px;
+}
+
 div.header {
     color: #222;
     padding: 5px;
@@ -486,8 +464,6 @@ div.header {
     background-color: #dfdfdf;
     background: -moz-linear-gradient(top, #fff, #dfdfdf);
     background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dfdfdf));
-    -webkit-border-top-right-radius: 5px; -moz-border-radius-topright: 5px; border-top-right-radius: 5px;
-    -webkit-border-top-left-radius: 5px; -moz-border-radius-topleft: 5px; border-top-left-radius: 5px;
 }
 
 div.header h2 {
@@ -509,12 +485,6 @@ div.header + div.section-content {
 div.section-content {
     padding:8px;
     background-color: #DFDFDF;
-    -webkit-border-bottom-left-radius: 8px;
-    -moz-border-radius-bottomleft: 8px;
-    border-bottom-left-radius: 8px;
-    -webkit-border-bottom-right-radius: 8px;
-    -moz-border-radius-bottomright: 8px;
-    border-bottom-right-radius: 8px;
 }
 /* End Section Formatting */
 
@@ -522,8 +492,6 @@ div.section-content {
 table.content {
     border-spacing:0;
     width: 100%;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
     /*text-shadow: 0px 1px 1px #fff;*/
 }
 
@@ -545,17 +513,6 @@ table.content > * > tr > * {
     background: #eee;
     background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee));
     background: -moz-linear-gradient(center top, #f3f3f3, #eee);
-}
-
-table.content > *:last-child > tr:last-child > *:first-child {
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    border-bottom-left-radius: 5px;
-}
-table.content > *:last-child > tr:last-child > *:last-child {
-    -webkit-border-bottom-right-radius: 5px;
-    -moz-border-radius-bottomright: 5px;
-    border-bottom-right-radius: 5px;
 }
 /* END Content */
 
