--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -82,7 +82,7 @@
             <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="subtle-link">
                     {{ entity.title }}
                     {% if entity.distance %}<small>
-                        {% blocktrans with entity.distance.m|humanise_distance as distance and entity.bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}
+                        {% blocktrans with entity.distance.m|humanise_distance as distance and entity.bearing as bearing %}(about {{ distance }} {{ bearing }}){% endblocktrans %}
                     </small>{% endif %}
                 </a></th></tr>
             {% if entity.metadata.real_time_information.pip_info %}
