--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -88,6 +88,9 @@
       {% endif %}
     </tbody>
   </table>
+  <div class="note powered-by">
+    <img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" />
+  </div>
   <ul class="link-list">
     {% if board %}
       {% ifequal board "departures" %}
