--- a/molly/apps/transport/templates/transport/public_transport.html
+++ b/molly/apps/transport/templates/transport/public_transport.html
@@ -20,7 +20,7 @@
             <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="subtle-link">
                 {{ entity.title }}
                 {% if entity.distance %}<small>
-                    {% blocktrans with entity.distance.m|round_up_10 as distance and entity.bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}
+                    {% blocktrans with entity.distance.m|humanise_distance as distance and entity.bearing as bearing %}(about {{ distance }} {{ bearing }}){% endblocktrans %}
                 </small>{% endif %}
             </a></th></tr>
             {% if entity.metadata.real_time_information.pip_info %}
@@ -79,7 +79,7 @@
             <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="subtle-link">
                 {{ entity.title }}
                 {% if entity.distance %}<small>
-                    {% blocktrans with entity.distance.m|round_up_10 as distance and entity.bearing as bearing %}(about {{ distance }} {{ bearing }}){% endblocktrans %}
+                    {% blocktrans with entity.distance.m|humanise_distance as distance and entity.bearing as bearing %}(about {{ distance }} {{ bearing }}){% endblocktrans %}
                 </small>{% endif %}
             </a></th></tr>
             {% if entity.metadata.real_time_information.pip_info %}
@@ -122,7 +122,7 @@
         {% for route in routes %}
             <li><a href="{% url places:route route.service_id route.pk %}">{{ route }}
             {% if route.nearest %}<br /><small><em>{% trans "Closest stop:" %} {{ route.nearest.title }}
-                {% if route.nearest_distance and route.nearest_bearing %}{% blocktrans with route.nearest_distance|round_up_10 as distance and route.nearest_bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}{% endif %}
+                {% if route.nearest_distance and route.nearest_bearing %}{% blocktrans with route.nearest_distance|humanise_distance as distance and route.nearest_bearing as bearing %}(about {{ distance }} {{ bearing }}){% endblocktrans %}{% endif %}
             </em></small>{% endif %}</a></li>
         {% endfor %}
     </ul>
