MOLLY-230: Tours app now supports multiple types of tours

--- a/molly/apps/tours/templates/tours/create.html
+++ b/molly/apps/tours/templates/tours/create.html
@@ -8,12 +8,12 @@
     </div>
     <ul class="content-list">
         {% for entity in entities %}
-            <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}">
+            <li><a href="{% url tours:create tour_type.slug %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}">
                 {{ entity.title }}
             </a></li>
         {% endfor %}
     </ul>
-    <form action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
+    <form action="{% url tours:create tour_type.slug %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
         <input type="submit" value="{% trans 'Save' %}" />
     </form>
 </div>
@@ -28,7 +28,7 @@
         </div>
         <ul class="link-list">
             {% for entity in attraction_entities %}
-                <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
+                <li><a href="{% url tours:create tour_type.slug %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
             {% endfor %}
         </ul>
     {% endfor %}
