--- a/molly/apps/tours/templates/tours/create_desktop.html
+++ b/molly/apps/tours/templates/tours/create_desktop.html
@@ -14,6 +14,7 @@
                 '{{ entity.identifier_scheme|escapejs }}:{{ entity.identifier_value|escapejs }}',
             {% endfor %}
         ];
+        var type_slug = '{{ tour_type.slug|escapejs }}';
         var all_pois = [
             {% for entity in all_pois %}
             {
@@ -33,12 +34,12 @@
         <h2>{% trans "Current stops on your tour" %}</h2>
         <ol id="poi-list" class="entity-list">
             {% for entity in entities %}
-                <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}" class="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">
+                <li><a href="{% url tours:create tour_type.slug %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}" class="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">
                     {{ entity.title }}
                 </a></li>
             {% endfor %}
         </ol>
-        <form id="poi-submit" action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
+        <form id="poi-submit" action="{% url tours:create tour_type.slug %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
             <input type="submit" value="{% trans 'Save' %}" />
         </form>
     </div>
@@ -50,7 +51,7 @@
             <h2>{{ entity_type.verbose_name_plural|capfirst }}</h2>
             <ul class="entity-list">
                 {% for entity in attraction_entities %}
-                    <li {% if entity in entities %} class="selected"{% endif %}><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/" class="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">{{ entity.title }}</a></li>
+                    <li {% if entity in entities %} class="selected"{% endif %}><a href="{% url tours:create tour_type.slug %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/" class="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">{{ entity.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
