--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -89,7 +89,10 @@
     </tbody>
   </table>
   <div class="note powered-by">
-    <a href="http://nationalrail.co.uk"><img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" /></a>
+    <a href="http://nationalrail.co.uk">
+        <small>For more information</small><br>
+        <img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" />
+    </a>
   </div>
   <ul class="link-list">
     {% if board %}
