Added link on NRE logo

--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -89,7 +89,7 @@
     </tbody>
   </table>
   <div class="note powered-by">
-    <img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" />
+    <a href="http://nationalrail.co.uk"><img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" /></a>
   </div>
   <ul class="link-list">
     {% if board %}
