MOLLY-229: Show tours metadata (as stored in places app) on tours page

--- a/molly/apps/tours/templates/tours/paper.html
+++ b/molly/apps/tours/templates/tours/paper.html
@@ -47,7 +47,7 @@
         
         <h2>{{ stop.entity.title }}</h2>
         {% render_location_map stop.entity.location 'printable' %}
-        <p>Metadata goes here</p>
+        {{ stop.description }}
         
     {% endfor %}
     
