MOLLY-231: Update transport page JavaScript to make AJAX updating work again

--- a/molly/apps/transport/templates/transport/public_transport.html
+++ b/molly/apps/transport/templates/transport/public_transport.html
@@ -10,7 +10,7 @@
 {% endif %}
 
 {% if favourites %}
-<div class="section">
+<div class="section" id="entities-favourites">
     <div class="header">
         <h2>{% trans "Favourite" %} {{ type.verbose_name_plural }} - {% now "G:i:s "%}</h2>
     </div>
