Tidy up service status app
Template is now correctly indented
A namedtuple is now used to make the API more verbose and readable

--- a/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/apps/service_status/templates/service_status/index.html
@@ -4,37 +4,35 @@
 
 {% for slug, name, lastBuildDate, statuses, announcements in services %}
 <div class="section">
-  <div class="header">
-    <h2>{% blocktrans with lastBuildDate|date:"H:i:s" as updated_date %}{{ name }} <small>at {{ updated_date }}</small>{% endblocktrans %}</h2>
-  </div>
-  {% if announcements %}
-  <h3 class="invisible">{% trans "Service announcements" %}</h3>
-  
-  <ul class="content-list">
-{% for announcement in announcements %}
-    <li>
-      <h3>{{ announcement.title }}</h3>
-      {{ announcement.description }}<br/>
-      <small>{{ announcement.date }}</small>
-    </li>
-{% endfor %}
-  </ul>
-{% endif %}
+    <div class="header">
+        <h2>{% blocktrans with lastBuildDate|date:"H:i:s" as updated_date %}{{ name }} <small>at {{ updated_date }}</small>{% endblocktrans %}</h2>
+    </div>
+    
+    {% if announcements %}
+        <h3 class="invisible">{% trans "Service announcements" %}</h3>
+        
+        <ul class="content-list">
+            {% for announcement in announcements %}
+                <li>
+                    <h3>{{ announcement.title }}</h3>
+                    {{ announcement.description }}<br/><small>{{ announcement.date }}</small>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-  <h3 class="invisible">{% trans "Services" %}</h3>
-
-  <ul class="content-list service-status-list">
-{% for status in statuses %}
-    <li class="service-status-item service-status-{{ status.status }}">
-      <span class="service-status-name">{% trans status.name %}</span><br/>
-      <span class="service-status-status">{{ status.status|capfirst }}</span>
-{% if status.statusMessage %}
-      <br/>
-      <span class="service-status-detail">{{ status.statusMessage }}</span>
-{% endif %}
-    </li>
-{% endfor %}
-  </ul>
+    <h3 class="invisible">{% trans "Services" %}</h3>
+    <ul class="content-list service-status-list">
+        {% for status in statuses %}
+            <li class="service-status-item service-status-{{ status.status }}">
+                <span class="service-status-name">{% trans status.name %}</span><br/>
+                <span class="service-status-status">{{ status.status|capfirst }}</span>
+                {% if status.statusMessage %}<br/>
+                    <span class="service-status-detail">{{ status.statusMessage }}</span>
+                {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
 </div>
 {% endfor %}
 
