--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -44,5 +44,13 @@
 	    {% endfor %}
         </tbody>
     </table>
+    
+    <div class="note powered-by">
+	<p>{% trans "From" %}</p>
+	{% for c in copyrights %}
+	    <p><a href="{{c.url}}">{{c.title}}</a></p>
+	{% endfor %}
+  </div>
 </div>
+
 {% endblock %}
