--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -88,10 +88,12 @@
     </tbody>
   </table>
   <div class="note powered-by">
-    <a href="http://nationalrail.co.uk">
-        <small>For more information</small><br>
-        <img src="{{ STATIC_URL }}places/images/powered-by-nre.png" alt="Powered by National Rail Enquiries" />
-    </a>
+    {% for c in copyrights %}
+      <a href="{{ c.url }}">
+	  <small>{% trans "For more information" %}</small><br>
+	  <img src="{{ STATIC_URL }}{{ c.picture }}" alt="{{ c.title }}" />
+      </a>
+    {% endfor %}
   </div>
   <ul class="link-list">
     {% if board %}
