Added a freshness indicator to inform a user when weather data might be out of date. NB this does not work with multiple active providers

--- a/molly/apps/weather/static/weather/css/smart.css
+++ b/molly/apps/weather/static/weather/css/smart.css
@@ -1,4 +1,9 @@
 /* Weather */
+
+/* Used to indicate that the weather observations shown are old */
+span#weather-old {
+    color: #A81515;
+}
 div.weather-icon {
     display:inline-block;
     width: 128px;
