--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -9,7 +9,10 @@
 <div class="section">
     <div class="header">
         <h2>{% block location %}{{ observation.name }}{% endblock %}
-	    <small>{% blocktrans with observation.observed_date|date:"H:i" as observation_time %}at {{ observation_time }}{% endblocktrans %}</small>
+	    <small>
+		{% if {{ fresh }} != True %}<span id="weather-old">{% trans "Sorry, these observations are a little old:" %}</span>
+		{% blocktrans with observation.observed_date|date:"H:i" as observation_time %}at {{ observation_time }}{% endblocktrans %}
+		</small>
 	</h2>
     </div>
     
